@@ -23,8 +23,8 @@ unfixed) have a look at the file BUGS.
 
 (completed tasks are indented one tab)
 
-- Transmission line defined by RLCG values.
-- Implement fftshift() functionality.
+	- Transmission line defined by RLCG values.
+	- Implement fftshift() functionality.
 - File based sources defined in the frequency domain.
 - MESFET translation from SPICE to qucs in the converter.
 - Four-terminal versions of two-port RFEDD's.
