@@ -1,3 +1,7 @@
+2009-04-01  Stefan Jahn  <stefan@lkcc.org>
+
+	* rlcg.cpp: Added new transmission line defined by RLCG loads.
+
 2009-03-20  Stefan Jahn  <stefan@lkcc.org>
 
 	* relais.cpp: Fixed on resistance value.  Same bug as in the time
